fix carousel btns bleeding out of container

--- a/src/components/carousel/Carousel.scss
+++ b/src/components/carousel/Carousel.scss
@@ -3,6 +3,7 @@
 .carousel {
 	display: flex;
 	padding: 30px 0;
+	position: relative;
 
 	img {
 		width: 100%;
@@ -12,15 +13,15 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		border: 0;
-		border-radius: 50%;
-		background-color: $background-dim;
-		color: $icon-color;
-		position: relative;
-		top: 15vh;
-		cursor: pointer;
 		height: 40px;
 		min-width: 40px;
+		background-color: $background-dim;
+		color: $icon-color;
+		border: 0;
+		border-radius: 50%;
+		position: absolute;
+		top: 50%;
+		cursor: pointer;
 	}
 	.previous {
 		left: 60px;
